--- a/potok/mainpage/static/css/mainpage.css
+++ b/potok/mainpage/static/css/mainpage.css
@@ -1,7 +1,16 @@
 .block1 {
-    display: block;
-    width: 100%;
-    height: auto;
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+.block1 video {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    width: 25%;
+    max-height: fit-content;
 }
 
 .p1 {
@@ -15,10 +24,9 @@
 
 .mainpage_logo {
     position: absolute;
-    top: 20%;
-    right: 50%;
-    transform: translate(50%, 50%) scale(2);
-    padding: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border: black;
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
@@ -29,7 +37,7 @@
     position: absolute;
     text-align: center;
     top: 40%;
-    left: 10%;
+    left: 101%;
     color: #ffffff;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 35px;
@@ -51,24 +59,54 @@
     margin-top: 5px;
 }
 
-.block2 {
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);    border-style: double;
-    background-color: black;
+.inf {
+    position: relative;
+    height: 100vh;
+    margin-top: 5%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
 }
 
-.block2 p {
-    margin-top: 10%;
-    height: auto;
-    width: auto;
-    max-width: 50%;
-    align-self: flex-start;
+.inf div {
+    height: 50%;
+    background-color: #000000;
     color: #ffffff;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 40px;
+    font-size: 35px;
+    margin: 1%;
+    margin-bottom: 10%;
+}
+
+.inf div p {
+    top: -5%;
+}
+
+.inf div img {
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+
+
+.popa {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    display: none;
+    border: 2px solid #ffffff;
+    border-radius: 30px;
+    padding-bottom: auto;
+}
+
+
+.popa .close {
+    position: absolute;
+    top: 10%;
+    left: 90%;
 }
 
 
