--- a/potok/mainpage/templates/mainpage/mainpage.html
+++ b/potok/mainpage/templates/mainpage/mainpage.html
@@ -11,49 +11,72 @@
     <link rel="stylesheet" href="{% static 'css/mainpage.css' %}">
 {% endblock %}
     <div class="block1">
-        <img class="p1" src="{% static 'img/p1.png' %}" alt="фон">
-        <img class="mainpage_logo" src="{% static 'images/potok_logo.png' %}" alt="Логотип">
-        
-        <p class="description">ЗДАРОВА АХАХАХАХА.<br>POTOK LOUNGE — туда, где дым мягче, чем твоя жизнь<br>
-        Сколько можно таскаться по унылым кальянным с прокуренными подушками и скучными вкусами?
-        Хватит кормить себя этим унылым шлаком.
-        Добро пожаловать в Potok Lounge — место, где табак льется плавно, как поток, а атмосфера тащит лучше любого антидепрессанта.
-        
-        <br>Potok Lounge. Здесь дым решает проблемы.</p>
+        <video class="vid1" autoplay muted loop>
+            <source src="{% static 'vid/vid1.mp4' %}" type="video/mp4">
+        </video>
+        <video class="vid2" autoplay muted loop>
+            <source src="{% static 'vid/vid2.mp4' %}" type="video/mp4">
+        </video>
+        <video class="vid3" autoplay muted loop>
+            <source src="{% static 'vid/vid3.mp4' %}" type="video/mp4">
+        </video>
+        <video class="vid4" autoplay muted loop>
+            <source src="{% static 'vid/vid4.mp4' %}" type="video/mp4">
+        </video>        
     </div>
+    <img class="mainpage_logo" src="{% static 'img/logo.png' %}" alt="Логотип">
+
     <div class="transition">
     </div>
-    <div class="block2">
-        <img class="p2" src="{% static 'img/p2.png' %}" alt="HUI">
-        <p>🔸 Авторские миксы, от которых у тебя мозги скрутятся в бараний рог — хочешь сладенького? Есть. Хочешь что-то поядренее? Легко.
-        
-            <br>🔸 Зона для своих — мягкие диваны, ламповый свет и музыка, которая не бьёт по ушам, а льется, как хороший дым.
+    <div class="inf">
+        <div id="inf1" class="inf1">
+            <div id="popup1" class="popa">
+                <span class="close">&times;</span>
+                <div class="popup-content"></div>
+            </div>
+            <img src="{% static 'img/inf1.png' %}" alt="">
+            <p>Развлечения</p>
+        </div>
+
+        <div id="inf2" class="inf2">
+            <div class="popa" id="popup2">
+                <span class="close">&times;</span>
+            </div>
+
+            <img src="{% static 'img/inf2.png' %}" alt="">
+            <p>Атмосфера</p>
+        </div>
+
+        <div id="inf3" class="inf3">
+            <div class="popa" id="popup3">
+                <span class="close">&times;</span>
+            </div>
+
+            <img src="{% static 'img/inf3.png' %}" alt="">
+            <p>Барная карта</p>
+        </div>
+
+        <div id="inf4" class="inf4">
+            <div class="popa" id="popup4">
+                <span class="close">&times;</span>
+            </div>
+
+            <img src="{% static 'img/inf4.png' %}" alt="">
+            <p>Дымное меню</p>
+        </div>
+
+        <div id="inf5" class="inf5">
+            <div class="popa" id="popup5">
+                <span class="close">&times;</span>
+            </div>
             
-            <br>🔸 Профессиональные кальянщики, которые знают, как не спалить чашу и не насувать тебе угля больше, чем надо. Мы не работаем по принципу "лишь бы дым шёл". Мы делаем тебе кайф.
-            
-            <br>🔸 Промо-акции и бонусы — лояльным гостям всегда отвалим что-то вкусненькое. Поток щедр, если ты в нём.
-    </p>
-    </div>
-    <div class="transition">
-    </div>
-    <div class="block3">
-        <img src="{% static 'img/p3.png' %}" alt="">
-        <p>Potok Lounge — тут халтуры нет.<br>
-            Кальяны — топовый металл и стекло, не Китай на соплях.<br>
-            Табак — свежак, без тухляка и сюрпризов, только проверенные бренды.<br>
-            Кокосовый уголь, без вони и химии.<br>
-            Чистый вкус, крепкий дым, никакого фуфла.<br>
-            Пришёл — раскурился — кайфанул.</p>
-    </div>
-    <div class="transition">
-    </div>
-    <div class="block4">
-        <img src="{% static 'img/p4.png' %}" alt="">
-        <p>Бренды, с которыми мы работаем</p>
+            <img src="{% static 'img/haha.png' %}" alt="">
+            <p>Закуски</p>
+        </div>
     </div>
 
-    <video autoplay muted>
-        <source src="{% static 'vid/vid1.mp4' %}" type="video/mp4">
-    </video>
-    
+    {% block scripts %}
+        <script src="{% static 'js/mp.js' %}"></script>
+    {% endblock %}
+
 {% endblock %}
