--- a/potok/static/css/base.css
+++ b/potok/static/css/base.css
@@ -33,10 +33,72 @@
 }
 
 body {
+    background-color: black;
+}
+
+body img, body video {
+    pointer-events: none;
+}
+
+.reg {
+    position: fixed;
     display: flex;
     flex-direction: column;
-    padding: 0%;
-    margin: 0%;
-    height: 100vh;
-    background-color: black;
+    top: 25%;
+    left: 25%;
+    background-color: rgb(0, 0, 0);
+    height: 40%;
+    width: 50%;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    z-index: -1;
+}
+
+.reg .forms {
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 35px;
+    max-width: 50%;
+}
+
+.reg .forms label {
+    background-color: blueviolet;
+    border: 2px solid #9e9e9e;
+    border-radius: 30px;
+}
+
+input[type="text"] {
+    background-color: blueviolet;
+    border: 2px solid #9e9e9e;
+    border-radius: 30px;
+}
+
+#pop_log {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: blueviolet;
+    padding: 30px;
+    border: 2px solid white;
+    border-radius: 8px;
+    z-index: 999;
+    color: white;
+}
+
+.pop_log {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: blueviolet;
+    padding: 30px;
+    border: 2px solid white;
+    border-radius: 8px;
+    z-index: 999;
+    color: white;
 }
